--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .layout {
+    @apply max-w-6xl mx-auto px-4;
+  }
+
+  .primary-color {
+    @apply bg-[#FBD46D];
+  }
+}
