--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,19 +78,33 @@
   }
 }
 
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar {
+body::-webkit-scrollbar {
   width: 10px;
   background-color: #f5f5f5;
 }
 
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.162);
+  background-color: #fbd46d;
+}
+
+.filter::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+.filter::-webkit-scrollbar {
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+.filter::-webkit-scrollbar-thumb {
+  border-radius: 10px;
   background-color: #fbd46d;
 }
 
