--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-[#F7F7F7] text-foreground;
+    @apply bg-[#F9FAFE] text-foreground;
   }
 }
 
@@ -86,14 +86,13 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar {
-  width: 10px;
+  width: 6px;
   background-color: #f5f5f5;
 }
 
 body::-webkit-scrollbar-thumb {
-  border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.162);
-  background-color: #fbd46d;
+  @apply bg-blue-400;
 }
 
 .filter::-webkit-scrollbar-track {
@@ -101,12 +100,12 @@ body::-webkit-scrollbar-thumb {
 }
 
 .filter::-webkit-scrollbar {
-  width: 8px;
+  width: 4px;
   background-color: #f5f5f5;
 }
 
 .filter::-webkit-scrollbar-thumb {
-  background-color: #fbd46d;
+  @apply bg-blue-400;
 }
 
 @keyframes pulse-blankspot {
